aligned table headers. Cleaned some code and fixed console errors. added keys.

--- a/project-3-notspotify/src/components/css/Playlist.css
+++ b/project-3-notspotify/src/components/css/Playlist.css
@@ -61,7 +61,7 @@
 }
 
 .Playlist th {
-	text-align: left;
+	text-align: center;
 }
 
 
